platform/chat-backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-backend
  namespace: event-12
spec:
  replicas: 0
  selector:
    matchLabels:
      app: chat-backend
  template:
    metadata:
      labels:
        app: chat-backend
    spec:
      containers:
        - name: chat-backend
          image: krusonl.azurecr.io/chat-backend:sha-c4e1dbf
          ports:
            - containerPort: 8000
          resources: {}
