platform/chat-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-backend
  namespace: event-12
spec:
  selector:
    app: chat-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
