platform/chat-backend/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chat-backend
  namespace: event-12
spec:
  hosts:
    - "kruso-event-12.lelos.xyz"
  gateways:
    - generic-gateway
  http:
    - match:
        - uri:
            prefix: /ws
      route:
        - destination:
            host: chat-backend
            port:
              number: 80
